<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_goal"
        android:textSize="15sp"
        android:textColor="@android:color/white"
        android:background="@android:color/darker_gray"
        android:layout_weight="0.5"/>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/text_input" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/text_input_query" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_save"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="6"
        android:background="@android:color/holo_orange_light">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tagged_searches"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="25dp"
            android:textStyle="bold"/>


        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6">
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2">
                <!--Tekst dobivaat pri izvrsuvanje-->
                <Button
                    android:id="@+id/btn_1"
                    android:layout_width="wrap_content"
                    android:layout_columnWeight="3"
                    android:layout_gravity="fill"
                    android:text="AndroidFP"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:text="@string/edit_button"
                    android:layout_gravity="fill"
                    android:layout_columnWeight="1"/>

                <Button
                    android:id="@+id/btn_2"
                    android:layout_width="wrap_content"
                    android:layout_gravity="fill"
                    android:layout_columnWeight="3"
                    android:text="Deitel"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_gravity="fill"
                    android:text="@string/edit_button"
                    android:layout_columnWeight="1"/>

                <Button
                    android:id="@+id/btn_3"
                    android:layout_width="wrap_content"
                    android:layout_gravity="fill"
                    android:text="@string/button_save"
                    android:layout_columnWeight="3"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_gravity="fill"
                    android:text="@string/edit_button"
                    android:layout_columnWeight="1"/>

                <Button
                    android:id="@+id/btn_4"
                    android:layout_width="wrap_content"
                    android:layout_gravity="fill"
                    android:text="@string/button_save"
                    android:layout_columnWeight="3"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_gravity="fill"
                    android:text="@string/edit_button"
                    android:layout_columnWeight="1"/>

                <Button
                    android:id="@+id/btn_5"
                    android:layout_width="wrap_content"
                    android:layout_gravity="fill"
                    android:text="@string/button_save"
                    android:layout_columnWeight="3"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_gravity="fill"
                    android:text="@string/edit_button"
                    android:layout_columnWeight="1"/>

                <Button
                    android:id="@+id/btn_6"
                    android:layout_width="wrap_content"
                    android:layout_gravity="fill"
                    android:text="@string/button_save"
                    android:layout_columnWeight="3"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_gravity="fill"
                    android:text="@string/edit_button"
                    android:layout_columnWeight="1"/>



            </GridLayout>
        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_tag"
        android:layout_weight="1"/>



</LinearLayout>